# pyniki

./: README.md  pyniki.py  pyproject.toml
src/pyniki/: curses.py  field.py  main.py  sim.py  ui.py
